[package]
name = "shellpage"
description = "Tool for conversion of markdown to html and quick blog setup"
repository = "https://github.com/hellbound22/shellpage"
authors = ["Rodrigo Mauricio <rodrigomauricio@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["blog", "markdown", "html"]
categories = ["web-programming"]
exclude = ["config.toml"]

[dependencies]
markdown = "1.0.0-alpha.21"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
tera = "1.20.0"
chrono = { version = "0.4.38", features = ["clock"] }
thiserror = "1.0.64"
